# paiof

./: CITATION.cff  LICENSE  README.md  paiof_env.yml  pyproject.toml
manuscript_analysis_details/: Common_Genera_Representatives.txt  HamTree_Renamed.newick  README.md  conda_env_with_orthofinder.yaml  paiof_conda_env.yaml  renameTree.py
manuscript_analysis_details/Hamtree_Results/: ._HamTree.newick  ._HamTree_Renamed.tre  ._Plotly_PCA.html  Command_Issued.txt  HamTree.newick  HamTree_Renamed.tre  Plotly_PCA.html
manuscript_analysis_details/paiof_Analysis/: Amy_Top_Hits.txt  KeyProts.faa  Micro_Top_Hits.txt  Strepto_Top_Hits.txt  autoCreateBoxPlotDistribution.py  createBoxplotDistributions.py  plot.R
manuscript_analysis_details/paiof_Analysis/paiof_Results/: Command_Issued.txt  Pairwise_AAI_Estimates.tsv
manuscript_analysis_details/paiof_Results/: Command_Issued.txt  Pairwise_AAI_Estimates.tsv  Plotting_Input.txt  plotAAI.R  processForPlotting.py
src/paiof/: ._util.py  util.py
test_case/: README.md
test_case/expected_hamtree_results/: Command_Issued.txt  HamTree.newick
test_case/expected_paiof_results/: Command_Issued.txt  Full_RBH_Listings.tsv  Pairwise_AAI_Estimates.tsv
test_case/expected_paiof_results/DIAMOND_OG_DBs/: OG0000000.fa.dmnd  OG0000001.fa.dmnd  OG0000002.fa.dmnd  OG0000003.fa.dmnd  OG0000004.fa.dmnd  OG0000005.fa.dmnd  OG0000006.fa.dmnd  OG0000007.fa.dmnd  OG0000008.fa.dmnd  (+5488 more)
test_case/input_proteomes/: GCA_000348785.1_ASM34878v1.faa  GCA_004102025.1_ASM410202v1.faa  GCA_019468565.1_ASM1946856v1.faa  GCA_024298965.1_ASM2429896v1.faa
(+19735 files in other folders)
