[project]
name = "paiof"
authors = [{name="Rauf Salamzade", email="salamzader@gmail.com"}]
version = "1.0.0"
description = "paiof & hamtree: tools to further process OrthoFinder results."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files=["bin/paiof", "bin/hamtree"]

[tool.setuptools.packages.find]
where = ["src"]